--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: page
-description: "向上走，即使一小步，也是新高度."
+description: "It’s not who we are underneath, but what we do that defines us."
 ---
 
 {% for post in paginator.posts %}
